--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8"
   }
 }
