--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
