--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "leaflet": "^1.9.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -30,11 +31,15 @@
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "prettier": "2.8.8"
   }
 }
