--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.12.0",
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "query-string": "^8.1.0",
