--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prisma": "^4.15.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
