--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "leaflet": "^1.9.4",
-    "next": "13.4.4",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
     "postcss": "8.4.24",
@@ -36,6 +36,7 @@
     "react-icons": "^4.9.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "world-countries": "^4.0.0",
