--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/react-date-range": "^1.4.4",
     "prettier": "2.8.8"
   }
 }
